# safe_lab_agents

./: .gitattributes  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_e2e.py  run_e2e.sh
docs/: ARCHITECTURE.md  E2E_TESTING.md
docs/figures_mini_example/: readme.txt
example_setup/: example_agent_run.md  safe-lab-agents.config.yaml  setup.py  simulation.py  tools.py
example_setup/context/: exepriment_description.md
example_setup/shared_calibration_example/: SETUP_CALIBRATION.md  conversation_safe_lab_agents.html
example_setup/shared_calibration_example/auto_log/: analysis_20260702_110345_744615.h5  analysis_20260702_110345_744615.json  analysis_20260702_110346_107795.h5  analysis_20260702_110346_107795.json  analysis_20260702_110554_976875.json  analysis_20260702_110632_712283.json  analysis_20260702_110853_120177.h5  analysis_20260702_110853_120177.json  analysis_20260702_111101_637626.h5  analysis_20260702_111101_637626.json  analysis_20260702_111244_597313.h5  analysis_20260702_111244_597313.json  analysis_20260702_111503_720167.json  analysis_20260702_111655_535619.h5  analysis_20260702_111655_535619.json  batch_20260702_110052_837963.json  batch_20260702_110113_296824.json  batch_20260702_110113_319978.json  batch_20260702_110203_433705.json  batch_20260702_110345_756150.json  batch_20260702_110714_779653.json  batch_20260702_110949_886033.json  batch_20260702_111655_303186.json  exp_20260702_110052_778427-set_angle.json  exp_20260702_110052_780766-set_angle.json  exp_20260702_110052_782181-set_angle.json  exp_20260702_110052_783279-measure_power.json  exp_20260702_110113_290386-set_angle.json  exp_20260702_110113_292186-set_angle.json  exp_20260702_110113_293802-set_angle.json  exp_20260702_110113_295216-measure_power.json  exp_20260702_110113_317955-set_angle.json  exp_20260702_110113_318951-set_angle.json  exp_20260702_110203_429864-set_angle.json  exp_20260702_110203_432171-set_angle.json  exp_20260702_110345_753659-set_angle.json  exp_20260702_110345_755020-set_angle.json  exp_20260702_110714_777520-set_angle.json  exp_20260702_110949_883309-set_angle.json  report_safe_lab_agents.html  (+2 more)
example_setup/shared_calibration_example/scripts/: acquire_scanA_qwp_pol.py  acquire_scanB_hwp_pol.py  analyze_scanA.py  analyze_scanB.py  auto_log_client.py  explore_00_probe.py  explore_01_noise.py  explore_02_polsweep.py  global_fit.py  make_summary_figure.py  physics_model.py  tools_client.py  verify_calibration.py
safe_lab_agents/: __init__.py  cli.py  config.py  start_config.py  utils.py
safe_lab_agents/agents/: __init__.py  base.py  claude_code.py  openclaw.py
safe_lab_agents/docker/: __init__.py  build.py  manager.py  runtime.py
safe_lab_agents/docker/dockerfiles/: Dockerfile.claude-code  Dockerfile.openclaw  entrypoint.claude-code.sh  entrypoint.openclaw.sh  firewall.sh
safe_lab_agents/export/: __init__.py  eln.py
safe_lab_agents/history/: __init__.py  display.py  html.py  render_utils.py  store.py
safe_lab_agents/mcp/: __init__.py  client_generator.py  loader.py  serialization.py  server.py  tool_utils.py
safe_lab_agents/mcp/predefined/: __init__.py  autolog.py  kadi4mat.py  kadi4mat_utils.py  lab_notebook.py  records.py
safe_lab_agents/report/: __init__.py  builder.py
safe_lab_agents/templates/: auto_log_client.py  auto_log_info.txt  reload_info.txt
tests/: conftest.py  test_agents.py  test_autolog.py  test_build.py  test_client_generator.py  test_config.py  test_eln_export.py  test_history.py  test_history_html.py  test_kadi4mat.py  test_login_token.py  test_manager.py  test_mcp_loader.py  test_records.py  test_reload_info.py  test_report.py  test_resume.py  test_runtime.py  test_serialization.py  test_server.py  test_session_name_guard.py  test_start_config.py  test_tool_utils.py  test_utils.py
tests/e2e/: __init__.py  _console.py  _driver.py  conftest.py  test_pipeline.py  tools_ping.py
